@@ -56,7 +56,7 @@ import org.xml.sax.helpers.XMLReaderFactory;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.transform.ptests.DOMResultTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.DOMResultTest
  * @run testng/othervm javax.xml.transform.ptests.DOMResultTest
  */
 @Listeners({jaxp.library.FilePolicy.class})
