@@ -50,7 +50,7 @@ import org.xml.sax.SAXException;
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true transform.TransformerFactoryTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.TransformerFactoryTest
  * @run testng/othervm transform.TransformerFactoryTest
  * @summary Test TransformerFactory.
  */
