@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,11 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng TestLayouts
  */
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
@@ -34,14 +35,14 @@ import java.util.function.LongFunction;
 import java.util.stream.Stream;
 
 import org.testng.annotations.*;
+
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
+import static java.lang.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.JAVA_LONG;
+import static java.lang.foreign.ValueLayout.JAVA_SHORT;
 import static org.testng.Assert.*;
 
 public class TestLayouts {
-
-    @Test(dataProvider = "badLayoutSizes", expectedExceptions = IllegalArgumentException.class)
-    public void testBadLayoutSize(SizedLayoutFactory factory, long size) {
-        factory.make(size);
-    }
 
     @Test(dataProvider = "badAlignments", expectedExceptions = IllegalArgumentException.class)
     public void testBadLayoutAlignment(MemoryLayout layout, long alignment) {
@@ -49,68 +50,18 @@ public class TestLayouts {
     }
 
     @Test
-    public void testVLAInStruct() {
-        MemoryLayout layout = MemoryLayout.ofStruct(
-                MemoryLayouts.JAVA_INT.withName("size"),
-                MemoryLayout.ofPaddingBits(32),
-                MemoryLayout.ofSequence(MemoryLayouts.JAVA_DOUBLE).withName("arr"));
-        assertFalse(layout.hasSize());
-        VarHandle size_handle = layout.varHandle(int.class, MemoryLayout.PathElement.groupElement("size"));
-        VarHandle array_elem_handle = layout.varHandle(double.class,
-                MemoryLayout.PathElement.groupElement("arr"),
-                MemoryLayout.PathElement.sequenceElement());
-        try (MemorySegment segment = MemorySegment.allocateNative(
-                layout.map(l -> ((SequenceLayout)l).withElementCount(4), MemoryLayout.PathElement.groupElement("arr")))) {
-            size_handle.set(segment, 4);
-            for (int i = 0 ; i < 4 ; i++) {
-                array_elem_handle.set(segment, i, (double)i);
-            }
-            //check
-            assertEquals(4, (int)size_handle.get(segment));
-            for (int i = 0 ; i < 4 ; i++) {
-                assertEquals((double)i, (double)array_elem_handle.get(segment, i));
-            }
-        }
-    }
-
-    @Test
-    public void testVLAInSequence() {
-        MemoryLayout layout = MemoryLayout.ofStruct(
-                MemoryLayouts.JAVA_INT.withName("size"),
-                MemoryLayout.ofPaddingBits(32),
-                MemoryLayout.ofSequence(1, MemoryLayout.ofSequence(MemoryLayouts.JAVA_DOUBLE)).withName("arr"));
-        assertFalse(layout.hasSize());
-        VarHandle size_handle = layout.varHandle(int.class, MemoryLayout.PathElement.groupElement("size"));
-        VarHandle array_elem_handle = layout.varHandle(double.class,
-                MemoryLayout.PathElement.groupElement("arr"),
-                MemoryLayout.PathElement.sequenceElement(0),
-                MemoryLayout.PathElement.sequenceElement());
-        try (MemorySegment segment = MemorySegment.allocateNative(
-                layout.map(l -> ((SequenceLayout)l).withElementCount(4), MemoryLayout.PathElement.groupElement("arr"), MemoryLayout.PathElement.sequenceElement()))) {
-            size_handle.set(segment, 4);
-            for (int i = 0 ; i < 4 ; i++) {
-                array_elem_handle.set(segment, i, (double)i);
-            }
-            //check
-            assertEquals(4, (int)size_handle.get(segment));
-            for (int i = 0 ; i < 4 ; i++) {
-                assertEquals((double)i, (double)array_elem_handle.get(segment, i));
-            }
-        }
-    }
-
-    @Test
     public void testIndexedSequencePath() {
-        MemoryLayout seq = MemoryLayout.ofSequence(10, MemoryLayouts.JAVA_INT);
-        try (MemorySegment segment = MemorySegment.allocateNative(seq)) {
-            VarHandle indexHandle = seq.varHandle(int.class, MemoryLayout.PathElement.sequenceElement());
+        MemoryLayout seq = MemoryLayout.sequenceLayout(10, ValueLayout.JAVA_INT);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, session);
+            VarHandle indexHandle = seq.varHandle(MemoryLayout.PathElement.sequenceElement());
             // init segment
             for (int i = 0 ; i < 10 ; i++) {
                 indexHandle.set(segment, (long)i, i);
             }
             //check statically indexed handles
             for (int i = 0 ; i < 10 ; i++) {
-                VarHandle preindexHandle = seq.varHandle(int.class, MemoryLayout.PathElement.sequenceElement(i));
+                VarHandle preindexHandle = seq.varHandle(MemoryLayout.PathElement.sequenceElement(i));
                 int expected = (int)indexHandle.get(segment, (long)i);
                 int found = (int)preindexHandle.get(segment);
                 assertEquals(expected, found);
@@ -118,91 +69,96 @@ public class TestLayouts {
         }
     }
 
-    @Test(dataProvider = "unboundLayouts", expectedExceptions = UnsupportedOperationException.class)
-    public void testUnboundSize(MemoryLayout layout, long align) {
-        layout.bitSize();
-    }
-
-    @Test(dataProvider = "unboundLayouts")
-    public void testUnboundAlignment(MemoryLayout layout, long align) {
-        assertEquals(align, layout.bitAlignment());
-    }
-
-    @Test(dataProvider = "unboundLayouts")
-    public void testUnboundEquals(MemoryLayout layout, long align) {
-        assertTrue(layout.equals(layout));
-    }
-
-    @Test(dataProvider = "unboundLayouts")
-    public void testUnboundHash(MemoryLayout layout, long align) {
-        layout.hashCode();
-    }
-
-    @Test(expectedExceptions = IllegalArgumentException.class)
-    public void testBadUnboundSequenceLayoutResize() {
-        SequenceLayout seq = MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT);
-        seq.withElementCount(-1);
-    }
-
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadBoundSequenceLayoutResize() {
-        SequenceLayout seq = MemoryLayout.ofSequence(10, MemoryLayouts.JAVA_INT);
+        SequenceLayout seq = MemoryLayout.sequenceLayout(10, ValueLayout.JAVA_INT);
         seq.withElementCount(-1);
     }
 
     @Test
     public void testEmptyGroup() {
-        MemoryLayout struct = MemoryLayout.ofStruct();
+        MemoryLayout struct = MemoryLayout.structLayout();
         assertEquals(struct.bitSize(), 0);
         assertEquals(struct.bitAlignment(), 1);
 
-        MemoryLayout union = MemoryLayout.ofUnion();
+        MemoryLayout union = MemoryLayout.unionLayout();
         assertEquals(union.bitSize(), 0);
         assertEquals(union.bitAlignment(), 1);
     }
 
     @Test
     public void testStructSizeAndAlign() {
-        MemoryLayout struct = MemoryLayout.ofStruct(
-                MemoryLayout.ofPaddingBits(8),
-                MemoryLayouts.JAVA_BYTE,
-                MemoryLayouts.JAVA_CHAR,
-                MemoryLayouts.JAVA_INT,
-                MemoryLayouts.JAVA_LONG
+        MemoryLayout struct = MemoryLayout.structLayout(
+                MemoryLayout.paddingLayout(8),
+                ValueLayout.JAVA_BYTE,
+                ValueLayout.JAVA_CHAR,
+                ValueLayout.JAVA_INT,
+                ValueLayout.JAVA_LONG
         );
         assertEquals(struct.byteSize(), 1 + 1 + 2 + 4 + 8);
-        assertEquals(struct.byteAlignment(), MemoryLayouts.ADDRESS.byteAlignment());
+        assertEquals(struct.byteAlignment(), 8);
     }
 
     @Test(dataProvider="basicLayouts")
     public void testPaddingNoAlign(MemoryLayout layout) {
-        assertEquals(MemoryLayout.ofPaddingBits(layout.bitSize()).bitAlignment(), 1);
+        assertEquals(MemoryLayout.paddingLayout(layout.bitSize()).bitAlignment(), 1);
     }
 
     @Test(dataProvider="basicLayouts")
     public void testStructPaddingAndAlign(MemoryLayout layout) {
-        MemoryLayout struct = MemoryLayout.ofStruct(
-                layout, MemoryLayout.ofPaddingBits(128 - layout.bitSize()));
+        MemoryLayout struct = MemoryLayout.structLayout(
+                layout, MemoryLayout.paddingLayout(128 - layout.bitSize()));
         assertEquals(struct.bitAlignment(), layout.bitAlignment());
     }
 
     @Test(dataProvider="basicLayouts")
     public void testUnionPaddingAndAlign(MemoryLayout layout) {
-        MemoryLayout struct = MemoryLayout.ofUnion(
-                layout, MemoryLayout.ofPaddingBits(128 - layout.bitSize()));
+        MemoryLayout struct = MemoryLayout.unionLayout(
+                layout, MemoryLayout.paddingLayout(128 - layout.bitSize()));
         assertEquals(struct.bitAlignment(), layout.bitAlignment());
     }
 
     @Test
     public void testUnionSizeAndAlign() {
-        MemoryLayout struct = MemoryLayout.ofUnion(
-                MemoryLayouts.JAVA_BYTE,
-                MemoryLayouts.JAVA_CHAR,
-                MemoryLayouts.JAVA_INT,
-                MemoryLayouts.JAVA_LONG
+        MemoryLayout struct = MemoryLayout.unionLayout(
+                ValueLayout.JAVA_BYTE,
+                ValueLayout.JAVA_CHAR,
+                ValueLayout.JAVA_INT,
+                ValueLayout.JAVA_LONG
         );
         assertEquals(struct.byteSize(), 8);
-        assertEquals(struct.byteAlignment(), MemoryLayouts.ADDRESS.byteAlignment());
+        assertEquals(struct.byteAlignment(), 8);
+    }
+
+    @Test
+    public void testSequenceBadCount() {
+        assertThrows(IllegalArgumentException.class, // negative
+                () -> MemoryLayout.sequenceLayout(-2, JAVA_SHORT));
+    }
+
+    @Test(dataProvider = "basicLayouts")
+    public void testSequenceInferredCount(MemoryLayout layout) {
+        assertEquals(MemoryLayout.sequenceLayout(-1, layout),
+                     MemoryLayout.sequenceLayout(Long.MAX_VALUE / layout.bitSize(), layout));
+    }
+
+    @Test
+    public void testSequenceOverflow() {
+        assertThrows(IllegalArgumentException.class, // negative
+                () -> MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_SHORT));
+        assertThrows(IllegalArgumentException.class, // flip back to positive
+                () -> MemoryLayout.sequenceLayout(Long.MAX_VALUE/3, JAVA_LONG));
+    }
+
+    @Test
+    public void testStructOverflow() {
+        assertThrows(IllegalArgumentException.class, // negative
+                () -> MemoryLayout.structLayout(MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_BYTE),
+                                                MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_BYTE)));
+        assertThrows(IllegalArgumentException.class, // flip back to positive
+                () -> MemoryLayout.structLayout(MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_BYTE),
+                                                MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_BYTE),
+                                                MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_BYTE)));
     }
 
     @Test(dataProvider = "layoutKinds")
@@ -219,34 +175,6 @@ public class TestLayouts {
                 assertEquals(layout.withBitAlignment(a).toString().contains("%"), a != bitAlign);
             }
         }
-    }
-
-    @DataProvider(name = "badLayoutSizes")
-    public Object[][] factoriesAndSizes() {
-        return new Object[][] {
-                { SizedLayoutFactory.VALUE_BE, 0 },
-                { SizedLayoutFactory.VALUE_BE, -1 },
-                { SizedLayoutFactory.VALUE_LE, 0 },
-                { SizedLayoutFactory.VALUE_LE, -1 },
-                { SizedLayoutFactory.PADDING, 0 },
-                { SizedLayoutFactory.PADDING, -1 },
-                { SizedLayoutFactory.SEQUENCE, -1 }
-        };
-    }
-
-    @DataProvider(name = "unboundLayouts")
-    public Object[][] unboundLayouts() {
-        return new Object[][] {
-                { MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT), 32 },
-                { MemoryLayout.ofSequence(MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT)), 32 },
-                { MemoryLayout.ofSequence(4, MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT)), 32 },
-                { MemoryLayout.ofStruct(MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT)), 32 },
-                { MemoryLayout.ofStruct(MemoryLayout.ofSequence(MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT))), 32 },
-                { MemoryLayout.ofStruct(MemoryLayout.ofSequence(4, MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT))), 32 },
-                { MemoryLayout.ofUnion(MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT)), 32 },
-                { MemoryLayout.ofUnion(MemoryLayout.ofSequence(MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT))), 32 },
-                { MemoryLayout.ofUnion(MemoryLayout.ofSequence(4, MemoryLayout.ofSequence(MemoryLayouts.JAVA_INT))), 32 },
-        };
     }
 
     @DataProvider(name = "badAlignments")
@@ -268,10 +196,10 @@ public class TestLayouts {
     }
 
     enum SizedLayoutFactory {
-        VALUE_LE(size -> MemoryLayout.ofValueBits(size, ByteOrder.LITTLE_ENDIAN)),
-        VALUE_BE(size -> MemoryLayout.ofValueBits(size, ByteOrder.BIG_ENDIAN)),
-        PADDING(MemoryLayout::ofPaddingBits),
-        SEQUENCE(size -> MemoryLayout.ofSequence(size, MemoryLayouts.PAD_8));
+        VALUE_LE(size -> valueLayoutForSize((int)size).withOrder(ByteOrder.LITTLE_ENDIAN)),
+        VALUE_BE(size -> valueLayoutForSize((int)size).withOrder(ByteOrder.BIG_ENDIAN)),
+        PADDING(MemoryLayout::paddingLayout),
+        SEQUENCE(size -> MemoryLayout.sequenceLayout(size, MemoryLayout.paddingLayout(8)));
 
         private final LongFunction<MemoryLayout> factory;
 
@@ -284,13 +212,22 @@ public class TestLayouts {
         }
     }
 
+    static ValueLayout valueLayoutForSize(int size) {
+        return switch (size) {
+            case 1 -> JAVA_BYTE;
+            case 2 -> JAVA_SHORT;
+            case 4 -> JAVA_INT;
+            case 8 -> JAVA_LONG;
+            default -> throw new UnsupportedOperationException();
+        };
+    }
+
     enum LayoutKind {
-        VALUE_LE(MemoryLayouts.BITS_8_LE),
-        VALUE_BE(MemoryLayouts.BITS_8_BE),
-        PADDING(MemoryLayouts.PAD_8),
-        SEQUENCE(MemoryLayout.ofSequence(1, MemoryLayouts.PAD_8)),
-        STRUCT(MemoryLayout.ofStruct(MemoryLayouts.PAD_8, MemoryLayouts.PAD_8)),
-        UNION(MemoryLayout.ofUnion(MemoryLayouts.PAD_8, MemoryLayouts.PAD_8));
+        VALUE(ValueLayout.JAVA_BYTE),
+        PADDING(MemoryLayout.paddingLayout(8)),
+        SEQUENCE(MemoryLayout.sequenceLayout(1, MemoryLayout.paddingLayout(8))),
+        STRUCT(MemoryLayout.structLayout(MemoryLayout.paddingLayout(8), MemoryLayout.paddingLayout(8))),
+        UNION(MemoryLayout.unionLayout(MemoryLayout.paddingLayout(8), MemoryLayout.paddingLayout(8)));
 
         final MemoryLayout layout;
 
@@ -316,26 +253,26 @@ public class TestLayouts {
         }
         //add basic layouts wrapped in a sequence with given size
         for (MemoryLayout l : basicLayouts) {
-            layoutsAndAlignments[i++] = new Object[] { MemoryLayout.ofSequence(4, l), l.bitAlignment() };
+            layoutsAndAlignments[i++] = new Object[] { MemoryLayout.sequenceLayout(4, l), l.bitAlignment() };
         }
         //add basic layouts wrapped in a struct
         for (MemoryLayout l : basicLayouts) {
-            layoutsAndAlignments[i++] = new Object[] { MemoryLayout.ofStruct(l), l.bitAlignment() };
+            layoutsAndAlignments[i++] = new Object[] { MemoryLayout.structLayout(l), l.bitAlignment() };
         }
         //add basic layouts wrapped in a union
         for (MemoryLayout l : basicLayouts) {
-            layoutsAndAlignments[i++] = new Object[] { MemoryLayout.ofUnion(l), l.bitAlignment() };
+            layoutsAndAlignments[i++] = new Object[] { MemoryLayout.unionLayout(l), l.bitAlignment() };
         }
         return layoutsAndAlignments;
     }
 
     static MemoryLayout[] basicLayouts = {
-            MemoryLayouts.JAVA_BYTE,
-            MemoryLayouts.JAVA_CHAR,
-            MemoryLayouts.JAVA_SHORT,
-            MemoryLayouts.JAVA_INT,
-            MemoryLayouts.JAVA_FLOAT,
-            MemoryLayouts.JAVA_LONG,
-            MemoryLayouts.JAVA_DOUBLE,
+            ValueLayout.JAVA_BYTE,
+            ValueLayout.JAVA_CHAR,
+            ValueLayout.JAVA_SHORT,
+            ValueLayout.JAVA_INT,
+            ValueLayout.JAVA_FLOAT,
+            ValueLayout.JAVA_LONG,
+            ValueLayout.JAVA_DOUBLE,
     };
 }
