@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,63 +24,61 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng TestTypeAccess
  */
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryHandles;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.MemoryLayouts;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 import org.testng.annotations.*;
 
 import java.lang.invoke.VarHandle;
 import java.lang.invoke.WrongMethodTypeException;
-import java.nio.ByteOrder;
 
 public class TestTypeAccess {
 
-    static final VarHandle INT_HANDLE = MemoryLayouts.JAVA_INT.varHandle(int.class);
-
-    static final VarHandle ADDR_HANDLE = MemoryHandles.asAddressVarHandle(INT_HANDLE);
+    static final VarHandle INT_HANDLE = ValueLayout.JAVA_INT.varHandle();
+    static final VarHandle ADDR_HANDLE = ValueLayout.ADDRESS.varHandle();
 
     @Test(expectedExceptions=ClassCastException.class)
     public void testMemoryAddressCoordinateAsString() {
-        try (MemorySegment s = MemorySegment.allocateNative(8)) {
-            int v = (int)INT_HANDLE.get("string");
-        }
+        int v = (int)INT_HANDLE.get("string");
     }
 
     @Test(expectedExceptions=WrongMethodTypeException.class)
     public void testMemoryCoordinatePrimitive() {
-        try (MemorySegment s = MemorySegment.allocateNative(8)) {
-            int v = (int)INT_HANDLE.get(1);
-        }
+        int v = (int)INT_HANDLE.get(1);
     }
 
     @Test(expectedExceptions=ClassCastException.class)
     public void testMemoryAddressValueGetAsString() {
-        try (MemorySegment s = MemorySegment.allocateNative(8)) {
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
             String address = (String)ADDR_HANDLE.get(s.address());
         }
     }
 
     @Test(expectedExceptions=ClassCastException.class)
     public void testMemoryAddressValueSetAsString() {
-        try (MemorySegment s = MemorySegment.allocateNative(8)) {
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
             ADDR_HANDLE.set(s.address(), "string");
         }
     }
 
     @Test(expectedExceptions=WrongMethodTypeException.class)
     public void testMemoryAddressValueGetAsPrimitive() {
-        try (MemorySegment s = MemorySegment.allocateNative(8)) {
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
             int address = (int)ADDR_HANDLE.get(s.address());
         }
     }
 
     @Test(expectedExceptions=WrongMethodTypeException.class)
     public void testMemoryAddressValueSetAsPrimitive() {
-        try (MemorySegment s = MemorySegment.allocateNative(8)) {
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment s = MemorySegment.allocateNative(8, 8, session);
             ADDR_HANDLE.set(s.address(), 1);
         }
     }
