@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
  * @test
  * @summary checking localised language/country names in finnish
  * @modules jdk.localedata
- * @bug 4429024 4964035 6558856 8008577
+ * @bug 4429024 4964035 6558856 8008577 8287868
  * @run main/othervm -Djava.locale.providers=JRE,SPI Bug4429024
  */
 
@@ -38,10 +38,10 @@ public class Bug4429024 {
 
         String [][] fiLocales = {
                     { "ar", "arabia" },
-                    { "ba", "baski" },
+                    { "ba", "ba\u0161kiiri" },
                     { "bg", "bulgaria" },
                     { "ca", "katalaani" },
-                    { "cs", "tsekki" },
+                    { "cs", "t\u0161ekki" },
                     { "da", "tanska" },
                     { "de", "saksa" },
                     { "el", "kreikka" },
@@ -72,7 +72,7 @@ public class Bug4429024 {
                     { "CA", "Kanada" },
                     { "CH", "Sveitsi" },
                     { "CN", "Kiina" },
-                    { "CZ", "Tsekin tasavalta" },
+                    { "CZ", "T\u0161ekki" },
                     { "DE", "Saksa" },
                     { "DK", "Tanska" },
                     { "ES", "Espanja" },
@@ -83,7 +83,7 @@ public class Bug4429024 {
                     { "IE", "Irlanti" },
                     { "IT", "Italia" },
                     { "JP", "Japani" },
-                    { "KR", "Korea" },
+                    { "KR", "Etel\u00e4-Korea" },
                     { "NL", "Alankomaat" },
                     { "NO", "Norja" },
                     { "PL", "Puola" },
@@ -110,8 +110,8 @@ public class Bug4429024 {
 
         static int getLanguage(String inLang, String localizedName){
 
-            Locale fiLocale = new Locale("fi", "FI");
-            Locale inLocale = new Locale (inLang, "");
+            Locale fiLocale = Locale.of("fi", "FI");
+            Locale inLocale = Locale.of(inLang);
 
             if (!inLocale.getDisplayLanguage(fiLocale).equals(localizedName)){
                 System.out.println("Language " + inLang +" should be \"" + localizedName  + "\", not \"" + inLocale.getDisplayLanguage(fiLocale) + "\"");
@@ -124,8 +124,8 @@ public class Bug4429024 {
 
     static int getCountry(String inCountry, String localizedName){
 
-            Locale fiLocale = new Locale("fi", "FI");
-            Locale inLocale = new Locale ("", inCountry);
+            Locale fiLocale = Locale.of("fi", "FI");
+            Locale inLocale = Locale.of("", inCountry);
 
             if (!inLocale.getDisplayCountry(fiLocale).equals(localizedName)){
                 System.out.println("Country " + inCountry + " should be \"" + localizedName + "\", not \"" + inLocale.getDisplayCountry(fiLocale) + "\"");
