@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @bug      8250768 8261976
+ * @bug      8250768 8261976 8277300 8282452
  * @summary  test generated docs for items declared using preview
  * @library  ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
@@ -33,8 +33,6 @@
  */
 
 import java.nio.file.Paths;
-import java.text.MessageFormat;
-import java.util.ResourceBundle;
 import javadoc.tester.JavadocTester;
 
 public class TestPreview extends JavadocTester {
@@ -56,35 +54,16 @@ public class TestPreview extends JavadocTester {
                 "m/pkg");
         checkExit(Exit.OK);
 
-        ResourceBundle bundle = ResourceBundle.getBundle("jdk.javadoc.internal.doclets.formats.html.resources.standard", ModuleLayer.boot().findModule("jdk.javadoc").get());
-
-        {
-            String zero = MessageFormat.format(bundle.getString("doclet.PreviewLeadingNote"), "<code>TestPreviewDeclaration</code>");
-            String one = MessageFormat.format(bundle.getString("doclet.Declared_Using_Preview"), "<code>TestPreviewDeclaration</code>", "<em>Sealed Classes</em>", "<code>sealed</code>");
-            String two = MessageFormat.format(bundle.getString("doclet.PreviewTrailingNote1"), "<code>TestPreviewDeclaration</code>");
-            String three = MessageFormat.format(bundle.getString("doclet.PreviewTrailingNote2"), new Object[0]);
-            String expectedTemplate = """
-                                      <div class="preview-block" id="preview-pkg.TestPreviewDeclaration"><span class="preview-label">{0}</span>
-                                      <ul class="preview-comment">
-                                      <li>{1}</li>
-                                      </ul>
-                                      <div class="preview-comment">{2}</div>
-                                      <div class="preview-comment">{3}</div>
-                                      </div>""";
-            String expected = MessageFormat.format(expectedTemplate, zero, one, two, three);
-            checkOutput("m/pkg/TestPreviewDeclaration.html", true, expected);
-        }
-
         checkOutput("m/pkg/TestPreviewDeclarationUse.html", true,
-                    "<code><a href=\"TestPreviewDeclaration.html\" title=\"interface in pkg\">TestPreviewDeclaration</a><sup><a href=\"TestPreviewDeclaration.html#preview-pkg.TestPreviewDeclaration\">PREVIEW</a></sup></code>");
+                    "<code><a href=\"TestPreviewDeclaration.html\" title=\"interface in pkg\">TestPreviewDeclaration</a></code>");
         checkOutput("m/pkg/TestPreviewAPIUse.html", true,
                 "<a href=\"" + doc + "java.base/preview/Core.html\" title=\"class or interface in preview\" class=\"external-link\">Core</a><sup><a href=\"" + doc + "java.base/preview/Core.html#preview-preview.Core\" title=\"class or interface in preview\" class=\"external-link\">PREVIEW</a>");
         checkOutput("m/pkg/DocAnnotation.html", true,
-                "<div class=\"preview-block\" id=\"preview-pkg.DocAnnotation\"><span class=\"preview-label\">");
+                "<span class=\"modifiers\">public @interface </span><span class=\"element-name type-name-label\">DocAnnotation</span>");
         checkOutput("m/pkg/DocAnnotationUse1.html", true,
-                "<div class=\"preview-block\" id=\"preview-pkg.DocAnnotationUse1\"><span class=\"preview-label\">");
+                "<div class=\"inheritance\">pkg.DocAnnotationUse1</div>");
         checkOutput("m/pkg/DocAnnotationUse2.html", true,
-                "<div class=\"preview-block\" id=\"preview-pkg.DocAnnotationUse2\"><span class=\"preview-label\">");
+                "<div class=\"inheritance\">pkg.DocAnnotationUse2</div>");
     }
 
     @Test
@@ -119,5 +98,40 @@ public class TestPreview extends JavadocTester {
                     <div class="block">Returns the value of the <code>i</code> record component.</div>
                     </div>
                     """);
+    }
+
+    @Test
+    public void test8277300() {
+        javadoc("-d", "out-8277300",
+                "--add-exports", "java.base/jdk.internal.javac=api2",
+                "--source-path", Paths.get(testSrc, "api2").toAbsolutePath().toString(),
+                "--show-packages=all",
+                "api2/api");
+        checkExit(Exit.OK);
+
+        checkOutput("api2/api/API.html", true,
+                    "<p><a href=\"#test()\"><code>test()</code></a></p>",
+                    "<p><a href=\"#testNoPreviewInSig()\"><code>testNoPreviewInSig()</code></a></p>",
+                    "title=\"class or interface in java.util\" class=\"external-link\">List</a>&lt;<a href=\"API.html\" title=\"class in api\">API</a><sup><a href=\"#preview-api.API\">PREVIEW</a></sup>&gt;");
+        checkOutput("api2/api/API2.html", true,
+                    "<a href=\"API.html#test()\"><code>API.test()</code></a><sup><a href=\"API.html#preview-api.API\">PREVIEW</a></sup>",
+                    "<a href=\"API.html#testNoPreviewInSig()\"><code>API.testNoPreviewInSig()</code></a><sup><a href=\"API.html#preview-api.API\">PREVIEW</a></sup>",
+                    "<a href=\"API3.html#test()\"><code>API3.test()</code></a><sup><a href=\"API3.html#preview-test()\">PREVIEW</a></sup>");
+        checkOutput("api2/api/API3.html", true,
+                    "<div class=\"block\"><a href=\"#test()\"><code>test()</code></a><sup><a href=\"#preview-test()\">PREVIEW</a></sup></div>");
+    }
+
+    @Test
+    public void test8282452() {
+        javadoc("-d", "out-8282452",
+                "--patch-module", "java.base=" + Paths.get(testSrc, "api").toAbsolutePath().toString(),
+                "--add-exports", "java.base/preview=m",
+                "--source-path", Paths.get(testSrc, "api").toAbsolutePath().toString(),
+                "--show-packages=all",
+                "preview");
+        checkExit(Exit.OK);
+
+        checkOutput("java.base/preview/NoPreview.html", false,
+                    "refers to one or more preview");
     }
 }
